--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# How to use the process area\n",
     "\n",
-    "Follow along this step-by-step guide to learn about the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area) class.\n",
+    "Follow along this step-by-step guide to learn about the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area).\n",
     "\n",
     "To avoid any issues, run the cells in order and don't skip any cells.<br />\n",
     "If something seems off, just restart the runtime and run the cells again."
@@ -57,7 +57,7 @@
     "\n",
     "A process area specifies the area of interest by a set of coordinates of the bottom left corner of each tile.\n",
     "\n",
-    "By default, a new instance of the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area) class has no coordinates.<br />\n",
+    "By default, a new instance of the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area) has no coordinates.<br />\n",
     "You can access the coordinates of the process area with the `coordinates` attribute,\n",
     "which is a numpy array of shape (n, 2) and data type int32."
    ],
@@ -78,7 +78,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "If you already have the coordinates, you can pass them to the initializer of the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area) class.",
+   "source": "If you already have the coordinates, you can pass them to the initializer of the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area).",
    "id": "16d060b89fb78989"
   },
   {
