--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -1000,8 +1000,8 @@
     "[`CoordinatesFilter`](https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/coordinates_filter)\n",
     "to the coordinates of the process area.\n",
     "\n",
-    "In this example, we filter the process area based on geospatial data with the\n",
-    "[`GeospatialFilter`](https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/geospatial_filter).\n",
+    "In this example, we will filter the process area based on geospatial data with the\n",
+    "[`GeospatialFilter`](https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/geospatial_filter).<br />\n",
     "You can remove coordinates of tiles that are within the polygons in the geodataframe with the difference mode."
    ],
    "id": "77a1ae2f99bea63c"
