--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -260,7 +260,8 @@
    "source": [
     "## Create a process area from a bounding box\n",
     "\n",
-    "You can create a process area from a bounding box with the [`from_bounding_box`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_bounding_box) class method."
+    "You can create a process area from a bounding box with the\n",
+    "[`from_bounding_box`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_bounding_box) class method."
    ],
    "id": "3a72ff5a5430dc"
   },
@@ -466,7 +467,8 @@
    "source": [
     "## Create a process area from a geodataframe\n",
     "\n",
-    "You can create a process area from a geodataframe with the [`from_gdf`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_gdf) class method."
+    "You can create a process area from a geodataframe with the\n",
+    "[`from_gdf`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_gdf) class method."
    ],
    "id": "a52abfcf9dec6030"
   },
@@ -593,7 +595,8 @@
    "source": [
     "## Create a process area from a json string\n",
     "\n",
-    "You can create a process area from a json string with the [`from_json`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_json) class method."
+    "You can create a process area from a json string with the\n",
+    "[`from_json`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_json) class method."
    ],
    "id": "21e8b950efe9c6d"
   },
@@ -867,7 +870,8 @@
    "source": [
     "# Append coordinates to the process area\n",
     "\n",
-    "You can append coordinates to the process area with the [`append`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.append) method."
+    "You can append coordinates to the process area with the\n",
+    "[`append`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.append) method."
    ],
    "id": "b6c9805f5c68d279"
   },
@@ -949,7 +953,8 @@
    "source": [
     "# Chunk the process area\n",
     "\n",
-    "You can chunk the process area into multiple process areas with the [`chunk`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.chunk) method.<br />\n",
+    "You can chunk the process area into multiple process areas with the\n",
+    "[`chunk`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.chunk) method.<br />\n",
     "This might be useful when you want to run multiple pipelines in distributed environments."
    ],
    "id": "ac7228934831283f"
@@ -1176,7 +1181,8 @@
    "source": [
     "# Convert the process area to a geodataframe\n",
     "\n",
-    "You can convert the process area to a geodataframe with the [`to_gdf`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_gdf) method."
+    "You can convert the process area to a geodataframe with the\n",
+    "[`to_gdf`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_gdf) method."
    ],
    "id": "db013e19b176171f"
   },
@@ -1222,7 +1228,8 @@
    "source": [
     "# Convert the process area to a json string\n",
     "\n",
-    "You can convert the process area to a json string with the [`to_json`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_json) method."
+    "You can convert the process area to a json string with the\n",
+    "[`to_json`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_json) method."
    ],
    "id": "d3b3284cf59aaf4d"
   },
