--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -433,7 +433,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "You can shrink the bounding box with the\n",
+    "You can also shrink the bounding box with the\n",
     "[`buffer`](https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.buffer) method."
    ],
    "id": "b9f1444f8d3e4050"
