add default value to zoom_start

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -139,6 +139,7 @@
     "def visualize_process_area(\n",
     "    process_area: aviary.ProcessArea,\n",
     "    tile_size: int,\n",
+    "    zoom_start: int = 16,\n",
     ") -> folium.Map:\n",
     "    # Convert the process area to a geodataframe\n",
     "    gdf = process_area.to_gdf(\n",
@@ -167,7 +168,7 @@
     "    # Create a folium map\n",
     "    folium_map = folium.Map(\n",
     "        location=location_epsg_4326,\n",
-    "        zoom_start=16,\n",
+    "        zoom_start=zoom_start,\n",
     "        tiles='OpenStreetMap',\n",
     "    )\n",
     "\n",
@@ -568,6 +569,7 @@
     "folium_map = visualize_process_area(\n",
     "    process_area=process_area,\n",
     "    tile_size=256,\n",
+    "    zoom_start=12,\n",
     ")\n",
     "\n",
     "# Convert the districts to EPSG:4326 (folium requires EPSG:4326)\n",
