add iterable docs for `BoundingBox` to notebook

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -229,6 +229,86 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "A bounding box is an iterable object, so it supports indexing, length and iteration.\n",
+    "\n",
+    "You can access the coordinates of the bounding box with the index operator."
+   ],
+   "id": "86cf046c91a804e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "x_min = bounding_box[0]\n",
+    "y_min = bounding_box[1]\n",
+    "x_max = bounding_box[2]\n",
+    "y_max = bounding_box[3]\n",
+    "\n",
+    "print(x_min)\n",
+    "print(y_min)\n",
+    "print(x_max)\n",
+    "print(y_max)"
+   ],
+   "id": "edca2cd687525ecd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "You can also unpack its coordinates.",
+   "id": "ebc23d67a76adc1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "x_min, y_min, x_max, y_max = bounding_box\n",
+    "\n",
+    "print(x_min)\n",
+    "print(y_min)\n",
+    "print(x_max)\n",
+    "print(y_max)"
+   ],
+   "id": "93a62bf1deac4317"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "A bounding box has a length, which is obviously 4.",
+   "id": "a6f2f52ef442b6b8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "print(len(bounding_box))",
+   "id": "63877417b9dd1273"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "You can iterate over the coordinates of the bounding box.",
+   "id": "7a749bb281beef93"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "for coordinate in bounding_box:\n",
+    "    print(coordinate)"
+   ],
+   "id": "15e6fd3215f24516"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## Create a bounding box from a geodataframe\n",
     "\n",
     "You can create a bounding box from a geodataframe with the\n",
