add iterable docs for `ProcessArea` to notebook

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -259,6 +259,61 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "A process area is an iterable object, so it supports indexing, length and iteration.\n",
+    "\n",
+    "You can access the coordinates of the process area with the index operator."
+   ],
+   "id": "274638af9db8687b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "coordinates_1 = process_area[0]\n",
+    "coordinates_2 = process_area[1]\n",
+    "\n",
+    "print(coordinates_1)\n",
+    "print(coordinates_2)"
+   ],
+   "id": "e03d19eb00cedfb6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "A process area has a length, which is equal to the number of coordinates, i.e. the number of tiles.",
+   "id": "8ae701ff81a05a2d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "print(len(process_area))",
+   "id": "31be7c13e3319c6e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "You can iterate over the coordinates of the process area.",
+   "id": "6e20d7354f4f7e33"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "for coordinates in process_area:\n",
+    "    print(coordinates)"
+   ],
+   "id": "37e3d9eb4d6a6677"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## Create a process area from a bounding box\n",
     "\n",
     "You can create a process area from a bounding box with the\n",
