add example to notebook

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -282,6 +282,27 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": [
+    "You can slice the process area to create a new process area of a subset of the coordinates with the index operator\n",
+    "and the colon operator."
+   ],
+   "id": "880dd4cacb2a9e6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "sliced_process_area = process_area[:-1]\n",
+    "\n",
+    "print(sliced_process_area.coordinates)"
+   ],
+   "id": "8b2a4cc628a412e9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "A process area has a length, which is equal to the number of coordinates, i.e. the number of tiles.",
    "id": "8ae701ff81a05a2d"
   },
