add example to notebook

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -721,7 +721,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Add or subtract process areas\n",
+    "# Add, subtract or intersect process areas\n",
     "\n",
     "You can add two process areas with the `+` operator.<br />\n",
     "If the process areas overlap, the resulting process area will contain the union of the two process areas."
@@ -941,6 +941,116 @@
    "id": "872fcf7e84aea7f4",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "You can intersect two process areas with the `&` operator.",
+   "id": "76179a28425a14ce"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "coordinates_1 = np.array(\n",
+    "    [\n",
+    "        [363084, 5715326],\n",
+    "        [363212, 5715326],\n",
+    "        [363084, 5715454],\n",
+    "        [363212, 5715454],\n",
+    "    ],\n",
+    "    dtype=np.int32,\n",
+    ")\n",
+    "process_area_1 = aviary.ProcessArea(coordinates=coordinates_1)\n",
+    "\n",
+    "coordinates_2 = np.array(\n",
+    "    [\n",
+    "        [363212, 5715454],\n",
+    "        [363340, 5715454],\n",
+    "        [363212, 5715582],\n",
+    "        [363340, 5715582],\n",
+    "    ],\n",
+    "    dtype=np.int32,\n",
+    ")\n",
+    "process_area_2 = aviary.ProcessArea(coordinates=coordinates_2)\n",
+    "\n",
+    "print(process_area_1.coordinates)\n",
+    "print(process_area_2.coordinates)"
+   ],
+   "id": "8f02bda0ccdf7743"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "process_area = process_area_1 & process_area_2\n",
+    "\n",
+    "print(process_area.coordinates)"
+   ],
+   "id": "f50b456607e47aad"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Visualize the process area.",
+   "id": "a1cd0c8a233453bd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "folium_map = visualize_process_area(\n",
+    "    process_area=process_area,\n",
+    "    tile_size=128,\n",
+    ")\n",
+    "\n",
+    "# Convert the first process area to a geodataframe\n",
+    "gdf_1 = process_area_1.to_gdf(\n",
+    "    epsg_code=25832,\n",
+    "    tile_size=128,\n",
+    ")\n",
+    "\n",
+    "# Convert the first process area to EPSG:4326 (folium requires EPSG:4326)\n",
+    "gdf_1_epsg_4326 = gdf_1.to_crs(epsg=4326)\n",
+    "\n",
+    "# Define the style of the first process area (red)\n",
+    "style_function_1 = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#FF595E',\n",
+    "    'weight': 2,\n",
+    "}\n",
+    "\n",
+    "# Add the first process area to the folium map\n",
+    "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
+    "\n",
+    "# Convert the second process area to a geodataframe\n",
+    "gdf_2 = process_area_2.to_gdf(\n",
+    "    epsg_code=25832,\n",
+    "    tile_size=128,\n",
+    ")\n",
+    "\n",
+    "# Convert the second process area to EPSG:4326 (folium requires EPSG:4326)\n",
+    "gdf_2_epsg_4326 = gdf_2.to_crs(epsg=4326)\n",
+    "\n",
+    "# Define the style of the second process area (blue)\n",
+    "style_function_2 = lambda feature: {\n",
+    "    'fillOpacity': 0.,\n",
+    "    'color': '#1982C4',\n",
+    "    'weight': 2,\n",
+    "}\n",
+    "\n",
+    "# Add the second process area to the folium map\n",
+    "folium.GeoJson(gdf_2_epsg_4326, style_function=style_function_2).add_to(folium_map)\n",
+    "\n",
+    "folium_map"
+   ],
+   "id": "89ea438c07a26cee"
   },
   {
    "metadata": {},
