add orthophotos to how to use the process area notebook

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -169,8 +169,26 @@
     "    folium_map = folium.Map(\n",
     "        location=location_epsg_4326,\n",
     "        zoom_start=zoom_start,\n",
-    "        tiles='OpenStreetMap',\n",
+    "        tiles=None,\n",
     "    )\n",
+    "\n",
+    "    # Add OpenStreetMap tiles to the folium map\n",
+    "    folium.TileLayer(\n",
+    "        tiles='OpenStreetMap',\n",
+    "        control=False,\n",
+    "    ).add_to(folium_map)\n",
+    "\n",
+    "    # Add orthophotos layer to the folium map\n",
+    "    folium.raster_layers.WmsTileLayer(\n",
+    "        url='https://www.wms.nrw.de/geobasis/wms_nw_dop',\n",
+    "        layers='nw_dop_rgb',\n",
+    "        fmt='image/png',\n",
+    "        transparent=True,\n",
+    "        version='1.3.0',\n",
+    "        attr='<a href=\"https://www.bezreg-koeln.nrw.de/geobasis-nrw\">Geobasis NRW</a>',\n",
+    "        name='Orthophotos',\n",
+    "        show=False,\n",
+    "    ).add_to(folium_map)\n",
     "\n",
     "    # Define the style of the process area\n",
     "    style_function = lambda feature: {\n",
@@ -180,7 +198,14 @@
     "    }\n",
     "\n",
     "    # Add the process area to the folium map\n",
-    "    folium.GeoJson(gdf_epsg_4326, style_function=style_function).add_to(folium_map)\n",
+    "    folium.GeoJson(\n",
+    "        data=gdf_epsg_4326,\n",
+    "        style_function=style_function,\n",
+    "        control=False,\n",
+    "    ).add_to(folium_map)\n",
+    "\n",
+    "    # Add layer control to the folium map\n",
+    "    folium.LayerControl().add_to(folium_map)\n",
     "\n",
     "    return folium_map"
    ],
