set collapsed in layer control to false

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -182,7 +182,9 @@
     "    ).add_to(folium_map)\n",
     "\n",
     "    # Add layer control to the folium map\n",
-    "    folium.LayerControl().add_to(folium_map)\n",
+    "    folium.LayerControl(\n",
+    "        collapsed=False,\n",
+    "    ).add_to(folium_map)\n",
     "\n",
     "    return folium_map"
    ],
