--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -6,10 +6,12 @@
    "source": [
     "# How to use the process area\n",
     "\n",
-    "Follow along this step-by-step guide to learn about the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area).\n",
+    "Follow along this step-by-step guide to learn about the [`ProcessArea`].\n",
     "\n",
     "To avoid any issues, run the cells in order and don't skip any cells.<br />\n",
-    "If something seems off, just restart the runtime and run the cells again."
+    "If something seems off, just restart the runtime and run the cells again.\n",
+    "\n",
+    "  [`ProcessArea`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area"
    ],
    "id": "e8054d57233f622a"
   },
@@ -57,9 +59,11 @@
     "\n",
     "A process area specifies the area of interest by a set of coordinates of the bottom left corner of each tile.\n",
     "\n",
-    "By default, a new instance of the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area) has no coordinates.<br />\n",
+    "By default, a new instance of the [`ProcessArea`] has no coordinates.<br />\n",
     "You can access the coordinates of the process area with the `coordinates` attribute,\n",
-    "which is a numpy array of shape (n, 2) and data type int32."
+    "which is a numpy array of shape (n, 2) and data type int32.\n",
+    "\n",
+    "  [`ProcessArea`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area"
    ],
    "id": "af5b536943c89066"
   },
@@ -78,7 +82,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "If you already have the coordinates, you can pass them to the initializer of the [`ProcessArea`](https://geospaitial-lab.github.io/aviary/api_reference/process_area).",
+   "source": [
+    "If you already have the coordinates, you can pass them to the initializer of the [`ProcessArea`].\n",
+    "\n",
+    "  [`ProcessArea`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area"
+   ],
    "id": "16d060b89fb78989"
   },
   {
@@ -108,9 +116,11 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "We can visualize the process area with [folium](https://python-visualization.github.io/folium/latest) for a better understanding.\n",
+    "We can visualize the process area with [folium] for a better understanding.\n",
     "\n",
-    "Install folium in the current runtime using pip."
+    "Install folium in the current runtime using pip.\n",
+    "\n",
+    "  [folium]: https://python-visualization.github.io/folium/latest"
    ],
    "id": "5752b1b402296031"
   },
@@ -364,8 +374,9 @@
    "source": [
     "## Create a process area from a bounding box\n",
     "\n",
-    "You can create a process area from a bounding box with the\n",
-    "[`from_bounding_box`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_bounding_box) class method."
+    "You can create a process area from a bounding box with the [`from_bounding_box`] class method.\n",
+    "\n",
+    "  [`from_bounding_box`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_bounding_box"
    ],
    "id": "3a72ff5a5430dc"
   },
@@ -571,8 +582,9 @@
    "source": [
     "## Create a process area from a geodataframe\n",
     "\n",
-    "You can create a process area from a geodataframe with the\n",
-    "[`from_gdf`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_gdf) class method."
+    "You can create a process area from a geodataframe with the [`from_gdf`] class method.\n",
+    "\n",
+    "  [`from_gdf`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_gdf"
    ],
    "id": "a52abfcf9dec6030"
   },
@@ -700,8 +712,9 @@
    "source": [
     "## Create a process area from a json string\n",
     "\n",
-    "You can create a process area from a json string with the\n",
-    "[`from_json`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_json) class method."
+    "You can create a process area from a json string with the [`from_json`] class method.\n",
+    "\n",
+    "  [`from_json`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.from_json"
    ],
    "id": "21e8b950efe9c6d"
   },
@@ -1085,8 +1098,9 @@
    "source": [
     "# Append coordinates to the process area\n",
     "\n",
-    "You can append coordinates to the process area with the\n",
-    "[`append`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.append) method."
+    "You can append coordinates to the process area with the [`append`] method.\n",
+    "\n",
+    "  [`append`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.append"
    ],
    "id": "b6c9805f5c68d279"
   },
@@ -1168,9 +1182,10 @@
    "source": [
     "# Chunk the process area\n",
     "\n",
-    "You can chunk the process area into multiple process areas with the\n",
-    "[`chunk`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.chunk) method.<br />\n",
-    "This might be useful when you want to run multiple pipelines in distributed environments."
+    "You can chunk the process area into multiple process areas with the [`chunk`] method.<br />\n",
+    "This might be useful when you want to run multiple pipelines in distributed environments.\n",
+    "\n",
+    "  [`chunk`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.chunk"
    ],
    "id": "ac7228934831283f"
   },
@@ -1214,15 +1229,15 @@
    "source": [
     "# Filter the process area\n",
     "\n",
-    "You can filter the process area with the\n",
-    "[`filter`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.filter) method.<br />\n",
-    "This method applies a\n",
-    "[`CoordinatesFilter`](https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/coordinates_filter)\n",
-    "to the coordinates of the process area.\n",
+    "You can filter the process area with the [`filter`] method.<br />\n",
+    "This method applies a [`CoordinatesFilter`] to the coordinates of the process area.\n",
     "\n",
-    "In this example, we will filter the process area based on geospatial data with the\n",
-    "[`GeospatialFilter`](https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/geospatial_filter).<br />\n",
-    "You can remove coordinates of tiles that are within the polygons in the geodataframe with the difference mode."
+    "In this example, we will filter the process area based on geospatial data with the [`GeospatialFilter`].<br />\n",
+    "You can remove coordinates of tiles that are within the polygons in the geodataframe with the difference mode.\n",
+    "\n",
+    "  [`filter`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.filter\n",
+    "  [`CoordinatesFilter`]: https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/coordinates_filter\n",
+    "  [`GeospatialFilter`]: https://geospaitial-lab.github.io/aviary/api_reference/geodata/coordinates_filter/geospatial_filter"
    ],
    "id": "77a1ae2f99bea63c"
   },
@@ -1396,8 +1411,9 @@
    "source": [
     "# Convert the process area to a geodataframe\n",
     "\n",
-    "You can convert the process area to a geodataframe with the\n",
-    "[`to_gdf`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_gdf) method."
+    "You can convert the process area to a geodataframe with the [`to_gdf`] method.\n",
+    "\n",
+    "  [`to_gdf`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_gdf"
    ],
    "id": "db013e19b176171f"
   },
@@ -1443,8 +1459,9 @@
    "source": [
     "# Convert the process area to a json string\n",
     "\n",
-    "You can convert the process area to a json string with the\n",
-    "[`to_json`](https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_json) method."
+    "You can convert the process area to a json string with the [`to_json`] method.\n",
+    "\n",
+    "  [`to_json`]: https://geospaitial-lab.github.io/aviary/api_reference/process_area/#aviary.ProcessArea.to_json"
    ],
    "id": "d3b3284cf59aaf4d"
   },
