fix inline code links

--- a/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# How to use the bounding box\n",
     "\n",
-    "Follow along this step-by-step guide to learn about the [`BoundingBox`].\n",
+    "Follow along this step-by-step guide to learn about the [`BoundingBox`][BoundingBox].\n",
     "\n",
     "To avoid any issues, run the cells in order and don't skip any cells.<br />\n",
     "If something seems off, just restart the runtime and run the cells again.\n",
     "\n",
-    "  [`BoundingBox`]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box"
+    "  [BoundingBox]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box"
    ],
    "id": "34ea408a966bb470"
   },
@@ -61,10 +61,10 @@
     "\n",
     "A bounding box specifies the spatial extent of an area of interest.\n",
     "\n",
-    "You can pass the coordinates to the initializer of the [`BoundingBox`].<br />\n",
+    "You can pass the coordinates to the initializer of the [`BoundingBox`][BoundingBox].<br />\n",
     "You can access the coordinates of the bounding box with the `x_min`, `y_min`, `x_max` and `y_max` attributes.\n",
     "\n",
-    "  [`BoundingBox`]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box"
+    "  [BoundingBox]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box"
    ],
    "id": "46661b6bdced9cd2"
   },
@@ -343,9 +343,9 @@
    "source": [
     "## Create a bounding box from a geodataframe\n",
     "\n",
-    "You can create a bounding box from a geodataframe with the [`from_gdf`] class method.\n",
+    "You can create a bounding box from a geodataframe with the [`from_gdf`][from_gdf] class method.\n",
     "\n",
-    "  [`from_gdf`]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.from_gdf"
+    "  [from_gdf]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.from_gdf"
    ],
    "id": "c6b2cbb0e0a566d4"
   },
@@ -467,9 +467,9 @@
    "source": [
     "# Buffer the bounding box\n",
     "\n",
-    "You can expand the bounding box with the [`buffer`] method.\n",
+    "You can expand the bounding box with the [`buffer`][buffer] method.\n",
     "\n",
-    "  [`buffer`]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.buffer"
+    "  [buffer]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.buffer"
    ],
    "id": "fbdc19d80077db5d"
   },
@@ -546,9 +546,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "You can also shrink the bounding box with the [`buffer`] method.\n",
+    "You can also shrink the bounding box with the [`buffer`][buffer] method.\n",
     "\n",
-    "  [`buffer`]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.buffer"
+    "  [buffer]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.buffer"
    ],
    "id": "b9f1444f8d3e4050"
   },
@@ -627,9 +627,9 @@
    "source": [
     "# Quantize the bounding box\n",
     "\n",
-    "You can align the bounding box to a grid with the [`quantize`] method.\n",
+    "You can align the bounding box to a grid with the [`quantize`][quantize] method.\n",
     "\n",
-    "  [`quantize`]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.quantize"
+    "  [quantize]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.quantize"
    ],
    "id": "a65e153f3a414983"
   },
@@ -708,9 +708,9 @@
    "source": [
     "# Convert the bounding box to a geodataframe\n",
     "\n",
-    "You can convert the bounding box to a geodataframe with the [`to_gdf`] method.\n",
+    "You can convert the bounding box to a geodataframe with the [`to_gdf`][to_gdf] method.\n",
     "\n",
-    "  [`to_gdf`]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.to_gdf"
+    "  [to_gdf]: https://geospaitial-lab.github.io/aviary/api_reference/bounding_box/#aviary.BoundingBox.to_gdf"
    ],
    "id": "b9c99201e69360ab"
   },
