--- a/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
+++ b/docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb
@@ -862,10 +862,7 @@
     "folium_map = visualize_process_area(process_area=process_area)\n",
     "\n",
     "# Convert the first process area to a geodataframe\n",
-    "gdf_1 = process_area_1.to_gdf(\n",
-    "    tile_size=128,\n",
-    "    epsg_code=25832,\n",
-    ")\n",
+    "gdf_1 = process_area_1.to_gdf(epsg_code=25832)\n",
     "\n",
     "# Convert the first process area to EPSG:4326 (folium requires EPSG:4326)\n",
     "gdf_1_epsg_4326 = gdf_1.to_crs(epsg=4326)\n",
@@ -881,10 +878,7 @@
     "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
     "\n",
     "# Convert the second process area to a geodataframe\n",
-    "gdf_2 = process_area_2.to_gdf(\n",
-    "    tile_size=128,\n",
-    "    epsg_code=25832,\n",
-    ")\n",
+    "gdf_2 = process_area_2.to_gdf(epsg_code=25832)\n",
     "\n",
     "# Convert the second process area to EPSG:4326 (folium requires EPSG:4326)\n",
     "gdf_2_epsg_4326 = gdf_2.to_crs(epsg=4326)\n",
@@ -978,10 +972,7 @@
     "folium_map = visualize_process_area(process_area=process_area)\n",
     "\n",
     "# Convert the first process area to a geodataframe\n",
-    "gdf_1 = process_area_1.to_gdf(\n",
-    "    tile_size=128,\n",
-    "    epsg_code=25832,\n",
-    ")\n",
+    "gdf_1 = process_area_1.to_gdf(epsg_code=25832)\n",
     "\n",
     "# Convert the first process area to EPSG:4326 (folium requires EPSG:4326)\n",
     "gdf_1_epsg_4326 = gdf_1.to_crs(epsg=4326)\n",
@@ -997,10 +988,7 @@
     "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
     "\n",
     "# Convert the second process area to a geodataframe\n",
-    "gdf_2 = process_area_2.to_gdf(\n",
-    "    tile_size=128,\n",
-    "    epsg_code=25832,\n",
-    ")\n",
+    "gdf_2 = process_area_2.to_gdf(epsg_code=25832)\n",
     "\n",
     "# Convert the second process area to EPSG:4326 (folium requires EPSG:4326)\n",
     "gdf_2_epsg_4326 = gdf_2.to_crs(epsg=4326)\n",
@@ -1096,10 +1084,7 @@
     "folium_map = visualize_process_area(process_area=process_area)\n",
     "\n",
     "# Convert the first process area to a geodataframe\n",
-    "gdf_1 = process_area_1.to_gdf(\n",
-    "    tile_size=128,\n",
-    "    epsg_code=25832,\n",
-    ")\n",
+    "gdf_1 = process_area_1.to_gdf(epsg_code=25832)\n",
     "\n",
     "# Convert the first process area to EPSG:4326 (folium requires EPSG:4326)\n",
     "gdf_1_epsg_4326 = gdf_1.to_crs(epsg=4326)\n",
@@ -1115,10 +1100,7 @@
     "folium.GeoJson(gdf_1_epsg_4326, style_function=style_function_1).add_to(folium_map)\n",
     "\n",
     "# Convert the second process area to a geodataframe\n",
-    "gdf_2 = process_area_2.to_gdf(\n",
-    "    tile_size=128,\n",
-    "    epsg_code=25832,\n",
-    ")\n",
+    "gdf_2 = process_area_2.to_gdf(epsg_code=25832)\n",
     "\n",
     "# Convert the second process area to EPSG:4326 (folium requires EPSG:4326)\n",
     "gdf_2_epsg_4326 = gdf_2.to_crs(epsg=4326)\n",
@@ -1507,10 +1489,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "gdf = process_area.to_gdf(\n",
-    "    tile_size=128,\n",
-    "    epsg_code=25832,\n",
-    ")\n",
+    "gdf = process_area.to_gdf(epsg_code=25832)\n",
     "\n",
     "print(gdf)"
    ],
